<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GetMedSoon</string>
    <string name="title_section1">Find Shop</string>
    <string name="title_section2">My Details</string>
    <string name="title_section3">Order History</string>
    <string name="title_section4">Favourite Orders</string>
    <string name="title_section5">Favourite Shops</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="buttonSearch">Search</string>
    <string name="shopName">Enter Shop Name</string>
    <string name="hintEnterPincode">Enter Pincode</string>
    <string name="hintPincode">hintPincode</string>
    <string name="hintShopName"></string>
    <string name="nameTextBoxHint">Name</string>
    <string name="nameTextBoxID">name</string>
    <string name="phoneTextBoxHint">Phone Number</string>
    <string name="phoneTextBoxID">phone</string>
    <string name="emailTextBoxHint">E-Mail ID</string>
    <string name="emailTextBoxID">email</string>
    <string name="addressTextBoxHint">Enter Your Address</string>
    <string name="addressTextBoxID">address</string>
    <string name="myDetailsTextViewName">My Details</string>
    <string name="dateOfBirthTextBoxHint">Date of Birth</string>
    <string name="myDetailsSaveName">SAVE</string>
    <string name="title_activity_search_results">SearchResultsActivity</string>
    <string name="title_activity_search_Medicine">SearchMedicineActivity</string>
    <string name="title_activity_search_Shop">SearchShopActivity</string>
    <string name="title_activity_test">title_activity_test</string>
    <string name="hello_world">Hello world!</string>


</resources>
